--- a/README.Rmd
+++ b/README.Rmd
@@ -101,7 +101,7 @@ ggplot(gapminder, aes(x = continent, y = lifeExp, colour = continent)) +
   scale_colour_manual(values = get_pal("caw_cat_1")) +
   theme_classic() +
   theme(legend.position = "none")
-# for continuous or sequential palettes we use scale_fill_gradientn (or scale_colour_manual)
+# for continuous or sequential palettes we use scale_fill_gradientn (or scale_colour_gradientn)
 ggplot(faithfuld) +
   geom_tile(aes(waiting, eruptions, fill = density)) +
   scale_fill_gradientn(colours = get_pal("caw_seq_1"))  +
