--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ nz_map <- nz_map %>%
 <!-- badges: start -->
 <!-- badges: end -->
 
-## package in development - not yet functional!
+## package in development - could break at any moment ....
 
 The goal of `CawthronColours` is to to provide official Cawthron colour palettes for use in R. The colour palettes are a mix of well known (e.g. `viridis`) and custom palettes. All are colour blind friendly.
 
