update readme example

--- a/README.Rmd
+++ b/README.Rmd
@@ -89,14 +89,14 @@ Below area few examples of plots made using [`ggplot2`](https://ggplot2.tidyvers
 
 For categorical palettes:
 
-* `scale_colour_manual()`
-* `scale_fill_manual()`
+* `scale_colour_manual(values = get_pal("caw_cat_1"))`
+* `scale_fill_manual(values = get_pal("caw_cat_1"))`
 
 
 For diverging or sequential palettes:
 
-* `scale_colour_gradientn()`
-* `scale_fill_gradientn()`
+* `scale_colour_gradientn(colours = get_pal("caw_seq_1"))`
+* `scale_fill_gradientn(colours = get_pal("caw_seq_1"))`
 
 
 ```{r, message=FALSE, warning=FALSE}
